Fixed attaching of files, changed the CSS to Verdana and a little bit bigger font size to make it more readable

--- a/www/resources/contacts.css
+++ b/www/resources/contacts.css
@@ -273,7 +273,7 @@ h3.contact-title {
 dt.attribute-name {
   margin: 0;
   padding: 0;
-  font-size: smaller;
+  font: 90% Verdana,Georgia,Serif;
   text-align: right;
   line-height: 1.5em;
   border-width: 0;
@@ -290,6 +290,7 @@ dd.attribute-value {
   border-width: 0;
   width: 65%;
   float: right;
+  font: 90% Verdana,Georgia,Serif;
 }
 dl.attribute-values {
   margin: 0;
@@ -347,13 +348,13 @@ div.tasks dd {
 }
 .contact-editlink {
 	padding-left: 1em;
-	font-size: 80%;
+	font: 100% Verdana,Georgia,Serif;
 }
 .contact-attributes {
 	clear:both;
 	display: block;
 	margin-left: 10px;
-	font-size: 80%;
+	font: 90% Verdana,Georgia,Serif;
 }
 .contact-attributes a {
 	text-decoration: none;
